Fixed css bug, where both min-width and max-width were set to 768. Max-width was changed to 767 to prevent overlap, which produces artifacts when screen width is exactly 768 pixels.

--- a/website/public/css/global-modules.styl
+++ b/website/public/css/global-modules.styl
@@ -221,7 +221,7 @@ $hrpg-modal-dropdown
     min-width:110px
     border-radius:4px
     background-color:#fff
-    @media screen and (max-width:768px)
+    @media screen and (max-width:767px)
       position:fixed
       z-index: 1000
       top: 2%
@@ -254,7 +254,7 @@ $hrpg-modal-dropdown
         max-height: 62.8vh
       li
         width: 100%
-        @media screen and (max-width:768px)
+        @media screen and (max-width:767px)
           width: auto
       a
         display: inline-block
@@ -297,7 +297,7 @@ $hrpg-modal-controls
     margin-right: 0.618em
     margin-bottom: 0.382em
     display: inline-block
-  @media screen and (max-width:768px)
+  @media screen and (max-width:767px)
     width: 96%
     position: fixed
     bottom:2%
