--- a/website/public/css/menu.styl
+++ b/website/public/css/menu.styl
@@ -77,7 +77,7 @@
   white-space: nowrap
   float:left;
   padding: 0.618em
-  @media screen and (max-width:768px)
+  @media screen and (max-width:767px)
     display: none
   > li
     margin-right: 0.618em
@@ -98,7 +98,7 @@
 .toolbar-bailey, .toolbar-wallet, .toolbar-options, .toolbar-subscribe
   float:right
   padding: 0.618em 0.618em 0.618em 0
-  @media screen and (max-width:768px)
+  @media screen and (max-width:767px)
     float: none
     display: inline-block
     padding: 0.618em 0.382em 0.618em 0
@@ -121,7 +121,7 @@
 .toolbar-options, .toolbar-wallet
   > li
     margin-left: 0.618em
-@media screen and (max-width:768px)
+@media screen and (max-width:767px)
   .toolbar-options
     > li
       padding-left:0em
@@ -140,7 +140,7 @@
   div
     padding-bottom: 1em
     width: 300px
-    @media screen and (max-width:768px)
+    @media screen and (max-width:767px)
       width: 96%
     .toolbar-notifs-notifs
       padding-bottom:1em
@@ -167,7 +167,7 @@
     hrpg-button-color-mixin(lighten($color-toolbar,32.8%))
 .toolbar-subscribe-button, .toolbar-controls .toolbar-subscribe-button
   @extend $hrpg-button
-@media screen and (max-width:768px)
+@media screen and (max-width:767px)
   .toolbar-toggle
     display: none
   .toolbar-mobile, .toolbar-settings, .toolbar-audio
