--- a/website/public/css/npcs.styl
+++ b/website/public/css/npcs.styl
@@ -8,7 +8,7 @@
   width:55px
   margin-right:0.618em
   position:relative
-  @media screen and (max-width:768px)
+  @media screen and (max-width:767px)
     margin-right:0px
 .npc_bailey
   float:left
