--- a/website/public/css/options.styl
+++ b/website/public/css/options.styl
@@ -12,7 +12,7 @@
 
   li
     @extend $hrpg-button
-    hrpg-button-color-mixin($color-options-menu)  
+    hrpg-button-color-mixin($color-options-menu)
 
 .options-submenu
   margin-top: -1.618em
@@ -27,9 +27,9 @@
   border-bottom: 1px solid darken($color-options-menu, 12%)
   padding: .5em
 
-  @media screen and (max-width:768px)
+  @media screen and (max-width:767px)
     padding: 1em 0.618em 0 0.618em
     border: 1px solid darken($color-options-menu, 12%)
     border-top: none
-    
-  
+
+
