--- a/website/public/css/shared.styl
+++ b/website/public/css/shared.styl
@@ -53,7 +53,7 @@ li.spaced
     color: white;
     margin-right: 5px;
 
-@media (max-width: 768px)
+@media (max-width:767px)
   .container-fluid
     padding-right: 5px
     padding-left: 5px
